--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         </div>
       </header>
           <!-- END OF HEADER SECTION -->
-
+<!-- 
     <div class="rainbow">
       <div class="color-one"></div>
       <div class="color-two"></div>
-    </div>
+    </div> -->
 
     <div class="heroimage">
       <div class="container-fluid">
