spending and saving section styling

--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
                 <div class="col-lg-4">
                     <div class="main-text">
                         <div class="main-header">
-                  <h2>Your Web3 Spendings all in One App</h2>
+                  <h2>Your Web3 <span>Spendings</span> all in One App</h2>
                         </div>
+                        <div class="main-buttons">
                   <button type="button" class="btn btn-dark btn-lg download-button">
                     <i class="fab fa-apple"></i>Google Play
                   </button>
@@ -91,6 +92,7 @@
                   >
                     <i class="fab fa-google-play"></i>App Store
                   </button>
+                </div>
                   </div>
                 </div>
                 <div class="col-lg-4">
@@ -248,7 +250,7 @@
     </section>
 
     <section class="moving-money">
-      <h1 class="text-center text-white">Moving Your Money Just Got Easier</h1>
+      <h1 class="text-center">Moving Your Money Just Got Easier</h1>
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-4">
