--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">
+                <a class="nav-link" aria-current="page" href="index.html">
                   <span class="svgflip">
                     <img src="images/fliplogo.svg" alt=""
                   /></span>
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-lg-9 mb-3 mb-sm-0">
           <div class="card">
-            <div class="card-body border-right-0"">
+            <div class="card-body border-right-0">
               <div class="card-img img-fluid">
                 <img src="images/flip-premium.png" alt="premium" />
               </div>
