--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   
             <span
               ><a class="navbar-brand" href="#"
-                ><img src="images/th.jpeg" class="piggyvest-logo" alt=""> </a
+                ><img src="" class="piggyvest-logo" alt=""> </a
             ></span>
             <button
               class="navbar-toggler"
