--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="index.html">
                   <span class="svgflip">
-                    <img src="images/fliplogo.svg" alt=""
+                    <img src="images/LOGO55.png" alt=""
                   /></span>
                   Flip</a
                 >
