--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <div class="flip-link">
                 <li class="nav-item">
-                    <div class="flip-link"> <a class="nav-link" aria-current="page" href="index.html"> <span class="svgflip"> <img src="images/LOGO55.png" alt=""/></span>
+                     <a class="nav-link" aria-current="page" href="index.html"> <span class="svgflip"> <img src="images/LOGO55.png" alt=""/></span>
                         Flip</a>
-                    </div>
+                    
                  
                 </li>
+                </div>
                 <li class="nav-item">
                   <a class="nav-link" href="blog.html">Blog</a>
                 </li>
@@ -89,24 +91,24 @@
             <div class="row">
                 <div class="col-lg-3">
                   <div class="left-images">
-                    <img src="images/star.png" alt="star-img" />
+                    <img id="star" src="images/star.png" alt="star-img" />
                     <img id="cup" src="images/cup.png" alt="cup-img" />
                   </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="main-text">
                         <div class="main-header">
-                  <h2>Your Web3 <span id="spin"></span> all in One App</h2>
+                  <h3>Your Web3 <span id="spin"></span> all in One App</h3>
                         </div>
                         <div class="main-buttons">
                   <button type="button" class="btn btn-dark btn-lg download-button">
-                    <i class="fab fa-apple"></i>Google Play
+                    <i class="fab fa-google-play"></i>Google Play
                   </button>
                   <button
                     type="button"
                     class="btn btn-outline-light btn-lg download-button"
                   >
-                    <i class="fab fa-google-play"></i>App Store
+                    <i class="fab fa-apple"></i>App Store
                   </button>
                 </div>
                   </div>
@@ -128,7 +130,7 @@
     <div class="rainbow">
       <div class="color-one"></div>
       <div class="color-two"></div>
-    </div> -->
+    </div>  -->
 
       <div class="hero">
         <div class="container-fluid">
@@ -209,7 +211,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12">
+          <div class="col-lg-6">
             <div class="savings-img">
               <img src="images/savings-image.png" alt="savings-image" />
             </div>
